[gd_scene load_steps=2 format=3 uid="uid://dfxb5innprmtp"]

[ext_resource type="Script" path="res://group_formation/group_formation.gd" id="1_qvmos"]

[node name="GroupFormation" type="Node3D"]
script = ExtResource("1_qvmos")

[node name="Position1" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Position2" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
